--- a/sass/components/index/_hero.scss
+++ b/sass/components/index/_hero.scss
@@ -7,7 +7,7 @@
 	background-color: var(--primary-beckground-color);
 	background-image: linear-gradient(
 		rgba(47, 48, 58, 0.4), 
-		rgba(47, 48, 58, 0.4)), url(../../../images/hero-bg-img-480.jpg);
+		rgba(47, 48, 58, 0.4)), url(../images/hero-bg-img-480.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -17,20 +17,20 @@
 		(min-resolution: 2dppx) {
 		background-image: linear-gradient(
 			rgba(47, 48, 58, 0.4), 
-			rgba(47, 48, 58, 0.4)), url(../../../images/hero-bg-img-480@2x.jpg);
+			rgba(47, 48, 58, 0.4)), url(../images/hero-bg-img-480@2x.jpg);
 	}
 
 	@media screen and (min-width: 768px) {
 		background-image: linear-gradient(
 			rgba(47, 48, 58, 0.4), 
-			rgba(47, 48, 58, 0.4)), url(../../../images/hero-bg-img-768.jpg);
+			rgba(47, 48, 58, 0.4)), url(../images/hero-bg-img-768.jpg);
 		}
 			@media screen and (min-device-pixel-ratio: 2), screen and
 			(min-resolution: 192dpi), screen and
 			(min-resolution: 2dppx) {
 				background-image: linear-gradient(
 				rgba(47, 48, 58, 0.4), 
-				rgba(47, 48, 58, 0.4)), url(../../../images/hero-bg-img-768@2x.jpg);
+				rgba(47, 48, 58, 0.4)), url(../images/hero-bg-img-768@2x.jpg);
 			}
 
 	@media screen and (min-width: 1200px) {
