--- a/css/main.css
+++ b/css/main.css
@@ -1140,6 +1140,11 @@ img {
     margin-bottom: 50px;
   }
 }
+@media screen and (min-width: 768px) {
+  .filter {
+    justify-content: center;
+  }
+}
 
 .filter__item:not(:last-child) {
   margin-right: 8px;
@@ -1164,22 +1169,35 @@ img {
 }
 
 .projects {
-  display: flex;
-  flex-wrap: wrap;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .projects {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
 }
 
 .projects__item {
-  width: calc((100% - 60px) / 3);
+  margin-bottom: 30px;
+  /*width: calc((100% - 60px) / 3);*/
+}
+@media screen and (min-width: 768px) {
+  .projects__item {
+    margin-bottom: 0;
+  }
 }
 
+/*
 .projects__item:not(:nth-child(3n)) {
-  margin-right: 30px;
+	margin-right: 30px;
 }
 
 .projects__item:not(:nth-last-child(-n+3)) {
-  margin-bottom: 30px;
+	margin-bottom: 30px;
 }
-
+*/
 .projects__title {
   margin-bottom: 4px;
   color: var(--title-color);
@@ -1206,7 +1224,7 @@ img {
 }
 
 .projects__img {
-  width: 370px;
+  /*width: 370px;*/
 }
 
 .projects__description {
@@ -1230,6 +1248,7 @@ img {
 }
 
 .projects__meta {
+  text-align: start;
   padding: 20px 24px;
   border-right: 1px solid var(--border-color);
   border-bottom: 1px solid var(--border-color);
