--- a/sass/components/portfolio/_filter.scss
+++ b/sass/components/portfolio/_filter.scss
@@ -10,6 +10,10 @@
 		justify-content: center;
 		margin-bottom: 50px;
 	}
+
+	@media screen and (min-width: 768px) {
+		justify-content: center;
+	}
 }
 .filter__item:not(:last-child) {
 	margin-right: 8px;
@@ -36,15 +40,5 @@
 	background-color: var(--accent-color);	
 
 	box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-}
-.projects {
-	display: flex;
-	flex-wrap: wrap;
-}
-.projects__item {
-	width: calc((100% - 60px) / 3);
-}
-.projects__item:not(:nth-child(3n)) {
-	margin-right: 30px;
+	}
 }
