--- a/sass/components/portfolio/_projects.scss
+++ b/sass/components/portfolio/_projects.scss
@@ -1,6 +1,32 @@
+.projects {
+	text-align: center;
+
+	@media screen and (min-width: 768px) {
+		display: flex;
+		flex-wrap: wrap;
+		gap: 30px;
+	}
+}
+
+.projects__item {
+	margin-bottom: 30px;
+
+	@media screen and (min-width: 768px) {
+		margin-bottom: 0;
+	}
+
+	/*width: calc((100% - 60px) / 3);*/
+}
+
+/*
+.projects__item:not(:nth-child(3n)) {
+	margin-right: 30px;
+}
+
 .projects__item:not(:nth-last-child(-n+3)) {
 	margin-bottom: 30px;
 }
+*/
 .projects__title {
 	margin-bottom: 4px;
 	color: var(--title-color);
@@ -25,7 +51,7 @@
 	overflow: hidden;
 }
 .projects__img {
-	width: 370px;
+	/*width: 370px;*/
 }
 .projects__description {
 	position: absolute;
@@ -50,6 +76,7 @@
 	}
 }
 .projects__meta {
+	text-align: start;
 	padding: 20px 24px;
 	border-right: 1px solid var(--border-color);
 	border-bottom: 1px solid var(--border-color);
